# rattata-rust

./: Cargo.toml  Makefile  README.md  cbindgen.toml
src/: example.lua  rattata.lua  test.lua
src/manager/: main.rs  rattata.rs
src/runtime/: main.rs
